# util.nix

./: .envrc  .gitignore  .sops.yaml  buildPgrxExtension.nix  buildPostgresqlExtension.nix  flake.nix  fufu  large_file.json  parse-env.nix  result-man
devshell/: c.nix  default.nix  gitea-runners.nix  haskell.nix  neuro.nix  postgres-c.nix  pure-c.nix  rust.nix  xmpp.nix
docs/: CREDITS_PLAN.md  README.md  attic-cache.md
legacy/: default.nix
lib/: default.nix  parse-env.nix
overlay/: default.nix  (+2 more)
package/hemar/grammar/tree-sitter/: CMakeLists.txt  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
package/hemar/grammar/tree-sitter/bindings/c/: tree-sitter-hemar.pc.in
package/hemar/grammar/tree-sitter/bindings/go/: binding.go
package/hemar/grammar/tree-sitter/bindings/node/: binding.cc  index.js
package/hemar/grammar/tree-sitter/bindings/python/tests/: test_binding.py
package/hemar/grammar/tree-sitter/bindings/python/tree_sitter_hemar/: __init__.py
package/hemar/grammar/tree-sitter/bindings/rust/: build.rs  lib.rs
package/hemar/grammar/tree-sitter/bindings/swift/TreeSitterHemarTests/: TreeSitterHemarTests.swift
package/hemar/grammar/tree-sitter/queries/: highlights.scm
package/hemar/grammar/tree-sitter/src/: grammar.json  node-types.json  parser.c
package/hemar/grammar/tree-sitter/test/corpus/: basic.txt
package/postgres/pg-migration/: Cargo.toml  default.nix
package/postgres/pg-migration/src/: lib.rs  main.rs
package/postgres/pg-migration/test/: migrate.rs
package/postgres/pg-migration/test/fixture/migration/: 1738645119_lazy_bear.sql
package/prettify-log/: Cargo.toml  default.nix
package/prettify-log/src/: main.rs
package/prettify-log/test/: prettify.rs
(+588 files in other folders)
