[package]
name = "prettify-log"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
colored_json = "5.0.0"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
float-cmp = "0.10.0"
tempfile = "3.16.0"

[[test]]
name = "test_prettify"
path = "test/prettify.rs"
