[package]
name = "pg-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = [ "env" ] }
postgres = "0.19.10"
rand = "0.9.0"

[dev-dependencies]
testcontainers = { version = "0.23.1", features = [] }

[lib]
name = "pg_migration_lib"
path = "src/lib.rs"

[[bin]]
name = "pg-migration"
path = "src/main.rs"

[[test]]
name = "test_migrate"
path = "test/migrate.rs"
